<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_dev_name"
            android:textColor="@color/text_secondary"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etDevName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="插线板1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/d_ip"
            android:textColor="@color/text_secondary"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="192.168.5.83"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/state_unknown"
            android:textColor="@color/text_secondary"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="开关1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="开关2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="开关3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="开关4"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
